<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_alerts"
            android:title="@string/nav_alerts"
            android:icon="@drawable/ic_alarm_black_24dp"/>
        <item
            android:id="@+id/nav_notes"
            android:title="@string/nav_notes"
            android:icon="@drawable/ic_class_black_24dp"/>
        <item
            android:id="@+id/nav_guide"
            android:title="@string/nav_guide"
            android:icon="@drawable/ic_guide_black_24dp"/>
        <item
            android:id="@+id/nav_exercise"
            android:title="@string/nav_exercise"
            android:icon="@drawable/ic_exercise_black_24dp"/>
        <item
            android:id="@+id/nav_place"
            android:title="@string/nav_place"
            android:icon="@drawable/ic_place_black_24dp"/>
        <item
            android:id="@+id/nav_biodata"
            android:title="@string/nav_biodata"
            android:icon="@drawable/ic_biodata_black_24dp"/>
        <item
            android:id="@+id/nav_weather"
            android:title="@string/nav_weather"
            android:icon="@drawable/ic_weather_black_24dp"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
    </group>
</menu>